@@ -940,6 +940,7 @@ UNDEFINED_MAPPER (log)
 UNDEFINED_MAPPER (log10)
 UNDEFINED_MAPPER (real)
 UNDEFINED_MAPPER (round)
+UNDEFINED_MAPPER (roundb)
 UNDEFINED_MAPPER (signum)
 UNDEFINED_MAPPER (sin)
 UNDEFINED_MAPPER (sinh)
