@@ -927,6 +927,7 @@ CD_SPARSE_MAPPER (log, ::log, std::log, 0.0, octave_Inf)
 CD_SPARSE_MAPPER (log10, ::log10, std::log10, 0.0, octave_Inf)
 SPARSE_MAPPER (real, SparseMatrix::dmapper, ::real)
 SPARSE_MAPPER (round, SparseMatrix::dmapper, xround)
+SPARSE_MAPPER (roundb, SparseMatrix::dmapper, xroundb)
 SPARSE_MAPPER (signum, SparseMatrix::dmapper, ::signum)
 SPARSE_MAPPER (sin, SparseMatrix::dmapper, ::sin)
 SPARSE_MAPPER (sinh, SparseMatrix::dmapper, ::sinh)
